objects/Exchange_Rate_Loader__c.object
<CustomObject>
    <fields>
        <fullName>APTS_ReportingModifiedDateKey__c</fullName>
        <formula>IF(AND(right(ReportingPeriodName__c, 3)==&apos;12A&apos;, ISPICKVAL(Type__c, &quot;Monthly&quot;)), text(value(Left(ReportingPeriodName__c,4))+1) &amp; &apos;_01A&apos;, if(value(Left(Right(ReportingPeriodName__c,3),2)) &lt;=08 &amp;&amp; value(Left(Right(ReportingPeriodName__c,3),2)) &lt;&gt;0 &amp;&amp; ISPICKVAL(Type__c, &quot;Monthly&quot;), 

Left(ReportingPeriodName__c,4) &amp;&apos;_0&apos; &amp; Text(value(Left(Right(ReportingPeriodName__c,3),2))+1)&amp;&apos;A&apos;, 

if(value(Left(Right(ReportingPeriodName__c,3),2)) &gt;=09 &amp;&amp; value(Left(Right(ReportingPeriodName__c,3),2)) &lt;=11 &amp;&amp; ISPICKVAL(Type__c, &quot;Monthly&quot;) , 

Left(ReportingPeriodName__c,4) &amp;&apos;_&apos; &amp; Text(value(Left(Right(ReportingPeriodName__c,3),2))+1)&amp;&apos;A&apos;, 
ReportingPeriodName__c 

)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ReportingModifiedDateKey</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CurrencyIsoCode__c</fullName>
        <label>CurrencyIsoCode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currency_Name__c</fullName>
        <label>Currency Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReportingPeriodName__c</fullName>
        <label>ReportingPeriodName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Daily</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Budget</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Exchange Rate Loader</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Value__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>CurrencyIsoCode__c</columns>
        <columns>Currency_Name__c</columns>
        <columns>ReportingPeriodName__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>ExchangeRateDaily</fullName>
        <columns>NAME</columns>
        <columns>CurrencyIsoCode__c</columns>
        <columns>Currency_Name__c</columns>
        <columns>Value__c</columns>
        <columns>ReportingPeriodName__c</columns>
        <columns>Type__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Daily</value>
        </filters>
        <label>ExchangeRateDaily</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ExchangeRateMonthly</fullName>
        <columns>NAME</columns>
        <columns>CurrencyIsoCode__c</columns>
        <columns>Currency_Name__c</columns>
        <columns>Value__c</columns>
        <columns>ReportingPeriodName__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Monthly</value>
        </filters>
        <label>ExchangeRateMonthly</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ExchangeRateYearly</fullName>
        <columns>NAME</columns>
        <columns>CurrencyIsoCode__c</columns>
        <columns>Currency_Name__c</columns>
        <columns>Value__c</columns>
        <columns>ReportingPeriodName__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Budget</value>
        </filters>
        <label>ExchangeRateYearly</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Exchange Rate Loader  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exchange Rate Loaders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>